[gd_scene load_steps=6 format=2]

[ext_resource path="res://views/Results.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/MS-large.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/images/logo-menu.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/MS-medium.tres" type="DynamicFont" id=4]
[ext_resource path="res://controls/TextButton.tscn" type="PackedScene" id=5]

[node name="Results" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 640.0
margin_bottom = 1004.0
custom_constants/separation = 30

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 640.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 2 )
text = "MENU_RESULTS"
align = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 640.0
margin_bottom = 419.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="EncourageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 449.0
margin_right = 640.0
margin_bottom = 521.0
custom_fonts/font = ExtResource( 4 )
text = "Nästa gång kan du!"
align = 1

[node name="ResultLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 551.0
margin_right = 640.0
margin_bottom = 640.0
custom_fonts/font = ExtResource( 2 )
text = "5 av 8 rätt"
align = 1

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 670.0
margin_right = 640.0
margin_bottom = 742.0
custom_fonts/font = ExtResource( 4 )
text = "Tid 00:99"
align = 1

[node name="SpacerControl" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 772.0
margin_right = 640.0
margin_bottom = 859.0
size_flags_vertical = 3

[node name="BackButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 889.0
margin_right = 640.0
margin_bottom = 984.0
custom_fonts/font = ExtResource( 2 )
text = "MENU_BACK"
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
